# spatialnca

./: .gitignore  README.md  pyproject.toml  run.py  setup_venv.sh
data/: Zhuang-ABCA-3.003_slice.h5ad
notebooks/: experiment-real.ipynb  prepare-real-data.ipynb  train.ipynb
spatialnca/: config.py  data.py  model.py  preprocess.py  spatial.py  train.py  utils.py
spatialnca/layers/: __init__.py  egnn.py  mlp.py
sweeps/: complete_graph.yaml  dynamic_edges.yaml
