[project]
name = "spatialnca"
version = "0.1.0"
description = ""
authors = [
    {name = "dschaub95",email = "schaub.darius@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.11.4",
    "jupyter>=1.1.1",
    "scanpy>=1.11.2",
    "squidpy>=1.6.5",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
    "wandb>=0.20.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["spatialnca*"]
exclude = ["data*", "wandb*", "figures*", "notebooks*", "sweeps*", "checkpoints*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
python-preference = "only-managed"